2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c (start_server_check): Memory leak.

2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/Makefile.am (noinst_HEADERS): Add amandad.h.
	* client-src/Makefile.am (noinst_HEADERS): Add clientconf.h.

2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-client.conf.5.xml: New file.

2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h (check_user_ruserok, check_user_amandahosts):
	  Remove prototype.
	* common-src/bsd-security.c: Pass the service name across check_user*
	  function and validate it from the .amandahosts file.

2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amidxtaped.c: Can be launched by amandad.
	* server-src/Makefile.am (INCLUDES): Add -I$(top_srcdir)/amandad-src
	* server-src/Makefile.am (amidxtaped__LDADD): Link with libamandad.
	* restore-src/restore.c: Fix indentation.

2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c: Can be launched by amandad
	* server-src/Makefile.am (INCLUDES): Add -I$(top_srcdir)/amandad-src
	* server-src/Makefile.am (amindexd_LDADD): Link with libamandad.

2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: New file.
	* amandad-src/amandad.h: New file.
	* amandad-src/amandad_util.c: New file, add function init_g_options
				      parse_g_options.
	* amandad-src/Makefile.am: New file.
	* client-src/amandad.c: Removed file.
	* client-src/amandad.h: Removed file.
	* client-src/client_util.c (init_g_options, parse_g_options): Remove.
	* client-src/client_util.h (init_g_options, parse_g_options): Remove.
	* client-src/Makefile.am (INCLUDES): -I$(top_srcdir)/amandad-src
	* client-src/Makefile.am (libexec_PROGRAMS): Remove amandad.
	* client-src/Makefile.am (LDADD): Add
				  ../amandad-src/libamandad.$(LIB_EXTENSION).
	* client-src/selfcheck.c: #include "amandad.h".