@@ -1,3 +1,13 @@
+2006-04-27  Jean-Louis Martineau <martineau@zmanda.com>
+	* amandad-src/amandad.c: Fix memory leak.
+	* amandad-src/amandad.h (free_g_options): Prototype.
+	* amandad-src/amandad_util.c (free_g_options): New function to free a
+						       g_option_t.
+	* server-src/amcleanupdisk.c: Fix memory leak.
+	* server-src/reporter.c: Fix memory leak.
+	* server-src/tapefile.c: Fix memory leak.
+	* server-src/taperscan.c: Put message in error_message.
+
 2006-04-26  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amcheck.c (start_server_check): Memory leak.
 
